--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding: 1.5rem;
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .logo {
@@ -35,4 +36,78 @@
 
 .text-iron {
   color: #0a035a;
+}
+
+.destination-card {
+  display: flex;
+  /* flex-direction: column; */
+  width: 100%;
+  height: 250px;
+  padding: 10px;
+  border: 2px solid gray;
+  margin: 10px 20px;
+}
+
+.img-destination {
+  background-size: cover;
+  width: 300px;
+  height: 180px;
+  margin: 10px;
+}
+
+.destination-text {
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.destination-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.price {
+  font-weight: 300;
+}
+
+.deal {
+  font-weight: bold;
+  background-color: #77bc77;
+  padding: 3px;
+  margin-right: 3px;
+  border-radius: 4px;
+}
+
+.premium {
+  font-weight: bold;
+  color: aliceblue;
+  background-color: #366aca;
+  padding: 3px;
+  margin-right: 3px;
+  border-radius: 4px;
+}
+
+.inclusive {
+  font-weight: bold;
+  color: aliceblue;
+  background-color: #366aca;
+  padding: 3px;
+  margin-right: 3px;
+  border-radius: 4px;
+}
+
+.delete {
+  font-size: 15px;
+  border-radius: 8px;
+  background-color: darkgray;
+  border: none;
+  margin-top: 4px;
+  padding: 10px;
+}
+
+.labels {
+  display: flex;
 }
